Updated feature extraction
Added spectral runoff

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\exant\\anaconda3\\lib\\site-packages\\pydub\\utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal import find_peaks\n",
     "import numpy as np\n",
     "from scipy.io import wavfile\n",
-    "from IPython.display import Audio\n",
-    "#allows for playing of audio\n",
+    "import IPython.display as ipd #allows for playing of audio\n",
     "import librosa\n",
     "import librosa.display\n",
     "#allows for spectrographs and other audio manipulation\n",
@@ -37,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Acinonyx files\n",
     "aj2 = pd.read_csv(r\".\\Capstone Files\\A. jubatus\\AJ2.csv\")\n",
     "aj3 = pd.read_csv(r\".\\Capstone Files\\A. jubatus\\AJ3.csv\")\n",
     "aj5 = pd.read_csv(r\".\\Capstone Files\\A. jubatus\\AJ5.csv\")\n",
@@ -45,7 +36,7 @@
     "aj3_sound, aj3_rate = librosa.load(r\".\\Capstone Files\\A. jubatus\\Acinonyx_jubatus_S1121_03.wav\")\n",
     "aj5_sound, aj5_rate = librosa.load(r\".\\Capstone Files\\A. jubatus\\Acinonyx_jubatus_S1121_05.wav\")\n",
     "aj13_sound, aj13_rate = librosa.load(r\".\\Capstone Files\\A. jubatus\\Acinonyx_jubatus_S1366_13.wav\")\n",
-    "#Acinonyx files\n",
+    "#Tuples\n",
     "AJ2 = (aj2, aj2_sound)\n",
     "AJ3 = (aj3, aj3_sound)\n",
     "AJ5 = (aj5, aj5_sound)\n",
@@ -54,10 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3718595\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ipd.Audio('Capstone Files\\A. jubatus\\Acinonyx_jubatus_S0612_02.wav')\n",
+    "print(len(aj2_sound))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Caracal files\n",
     "C1 = pd.read_csv(r\".\\Capstone Files\\Caracal\\C1.csv\")\n",
     "C1_sound , C1_rate = librosa.load(r\".\\Capstone Files\\Caracal\\Caracal_1_Male_Growl+Hiss.wav\")\n",
     "C2 = pd.read_csv(r\".\\Capstone Files\\Caracal\\C2.csv\")\n",
@@ -70,7 +80,7 @@
     "C5_sound , C5_rate = librosa.load(r\".\\Capstone Files\\Caracal\\Caracal_5___Hiss+Growl.wav\")\n",
     "C6 = pd.read_csv(r\".\\Capstone Files\\Caracal\\C6.csv\")\n",
     "C6_sound , C6_rate = librosa.load(r\".\\Capstone Files\\Caracal\\Caracal_6___Hiss+Growl.wav\")\n",
-    "#Caracal files\n",
+    "#Tuples\n",
     "C1T = (C1, C1_sound)\n",
     "C2T = (C2, C2_sound)\n",
     "C3T = (C3, C3_sound)\n",
@@ -81,10 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Domestica files\n",
     "D1 = pd.read_csv(r\".\\Capstone Files\\Domestica\\D1.csv\")\n",
     "D1_sound , D1_rate = librosa.load(r\".\\Capstone Files\\Domestica\\Felis_silvestris_f_domestica_S0050_01_pair_adult_hiss,growl.wav\")\n",
     "D2 = pd.read_csv(r\".\\Capstone Files\\Domestica\\D2.csv\")\n",
@@ -95,7 +106,7 @@
     "D4_sound, D4_rate = librosa.load(r\".\\Capstone Files\\Domestica\\Felis_silvestris_f_domestica_DIG0089_01_male_juvenile_call,purr.wav\")\n",
     "D5 = pd.read_csv(r\".\\Capstone Files\\Domestica\\D5.csv\")\n",
     "D5_sound, D5_rate = librosa.load(r\".\\Capstone Files\\Domestica\\Felis_silvestris_f_domestica_DIG0015_14_male_juvenile_purrpurr.wav\")\n",
-    "#Domestica files\n",
+    "#Tuples\n",
     "D1T = (D1, D1_sound)\n",
     "D2T = (D2, D2_sound)\n",
     "D3T = (D3, D3_sound)\n",
@@ -105,10 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#L lynx audio files\n",
     "L1 = pd.read_csv(r\".\\Capstone Files\\L. Lynx\\L1.csv\")\n",
     "L1_sound, L1_rate = librosa.load(r\".\\Capstone Files\\L. Lynx\\Lynx_lynx_1.wav\")\n",
     "L2 = pd.read_csv(r\".\\Capstone Files\\L. Lynx\\L2.csv\")\n",
@@ -133,7 +145,7 @@
     "L11_sound, L11_rate = librosa.load(r\".\\Capstone Files\\L. Lynx\\Lynx_lynx_11.wav\")\n",
     "L12 = pd.read_csv(r\".\\Capstone Files\\L. Lynx\\L12.csv\")\n",
     "L12_sound, L12_rate = librosa.load(r\".\\Capstone Files\\L. Lynx\\Lynx_lynx_12.wav\")\n",
-    "#L lynx audio files\n",
+    "# Tuples\n",
     "L1T = (L1, L1_sound)\n",
     "L2T = (L2, L2_sound)\n",
     "L3T = (L3, L3_sound)\n",
@@ -150,25 +162,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Lynx Rufus\n",
     "LR1 = pd.read_csv(r\".\\Capstone Files\\L. Rufus\\LR1.csv\")\n",
     "LR1_sound, LR1_rate = librosa.load(r\"C:\\Users\\exant\\My Jupyter Files\\Capstone\\Capstone Files\\L. Rufus\\LR1.wav\")\n",
     "LR2 = pd.read_csv(r\".\\Capstone Files\\L. Rufus\\LR2.csv\")\n",
     "LR2_sound, LR2_rate = librosa.load(r\".\\Capstone Files\\L. Rufus\\LR2.wav\")\n",
-    "#Lynx Rufus\n",
+    "#Tuples\n",
     "LR1T = (LR1, LR1_sound)\n",
     "LR2T = (LR2, LR2_sound)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Leopardus Pardalis\n",
     "LP1 = pd.read_csv(r\".\\Capstone Files\\Leopardus\\LP1.csv\")\n",
     "LP1_sound, LP1_rate = librosa.load(r\".\\Capstone Files\\Leopardus\\LP1.wav\")\n",
     "LP2 = pd.read_csv(r\".\\Capstone Files\\Leopardus\\LP2.csv\")\n",
@@ -177,7 +191,7 @@
     "LP3_sound, LP3_rate = librosa.load(r\".\\Capstone Files\\Leopardus\\LP3.wav\")\n",
     "LP4 = pd.read_csv(r\".\\Capstone Files\\Leopardus\\LP4.csv\")\n",
     "LP4_sound, LP4_rate = librosa.load(r\".\\Capstone Files\\Leopardus\\LP4.wav\")\n",
-    "#Leopardus Pardalis\n",
+    "#Tuples\n",
     "LP1T = (LP1, LP1_sound)\n",
     "LP2T = (LP2, LP2_sound)\n",
     "LP3T = (LP3, LP3_sound)\n",
@@ -185,8 +199,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CT1 = pd.read_csv(r\".\\Capstone Files\\Catopuma temminckii\\Catopuma temminckii sounds.csv\")\n",
+    "CT1_sound, CT1_rate = librosa.load(r\".\\Capstone Files\\Catopuma temminckii\\Catopuma_temminckii_V1736_02.wav\")\n",
+    "CT1T = (CT1, CT1_sound)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,32 +254,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "def pulses1(file):\n",
-    "    count = 0\n",
-    "    frequencies = top_freq(file)\n",
-    "    for i in range(len(frequencies)):\n",
-    "        if i != 0 and i <= (len(frequencies)-2):\n",
-    "            if frequencies[i]>frequencies[i-1] and frequencies[i]>frequencies[i+1]:\n",
-    "                count += 1\n",
-    "    #pulse per second\n",
-    "    pulse = count/(len(file)/22050)\n",
-    "    return pulse"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pulses(file):\n",
-    "    y = file\n",
-    "\n",
     "    #Find max\n",
-    "    peaks = find_peaks(y, height = 0, prominence = 0.01)\n",
+    "    peaks = find_peaks(file, height = 0, prominence = 0.01)\n",
     "    max_height = peaks[1]['peak_heights'] #array of the heights of  peaks\n",
     "    pulse = len(peaks[0])/(len(file)/22050)\n",
     "    return pulse"
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,25 +287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_mfcc(file):\n",
-    "    \n",
-    "    mfcc = np.mean(librosa.feature.mfcc(y=file, sr=22050, n_mfcc=13).T,axis=0)\n",
-    "    \n",
-    "    return mfcc"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Pass in a list of tuples, each tuple should contain two items, the first item will be the dataframe of the times\n",
-    "#the second item should be the audio file itself\n",
+    "#Pass in a list of tuples, containing two items, the first being a dataframe of the times and the second being the audio file\n",
     "def audio_feat_extractor(lst_tup):\n",
     "    data = []\n",
     "    for tup in lst_tup:\n",
@@ -318,9 +309,16 @@
     "            range_freq = frequency_range(temp)\n",
     "            pulse = pulses(temp)\n",
     "            partial = partials(temp)\n",
-    "            mfcc = extract_mfcc(temp)\n",
-    "            data.append([amplitude_range, average_amp, range_freq, pulse, partial, mfcc, duration, zeros, y[0], y[1], y[2],y[5]])\n",
-    "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec','Partials', 'MFCC', 'Duration','Zero_Crossings','Species', 'Sex', 'Age','Call'])\n",
+    "            mfcc = np.mean(librosa.feature.mfcc(y=temp, sr=22050, n_mfcc=13))\n",
+    "            S, phase = librosa.magphase(librosa.stft(temp))\n",
+    "            rolloff = np.mean(librosa.feature.spectral_rolloff(S=S, sr=22050))\n",
+    "            \n",
+    "            data.append([zeros, duration, amplitude_range, average_amp, range_freq, pulse, partial, mfcc, rolloff, y[1], y[2],\n",
+    "                         y[0], y[5]])\n",
+    "    \n",
+    "    output = pd.DataFrame(data, columns = ['Zero_Crossings', 'Duration', 'Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec',\n",
+    "                                           'Partials', 'MFCC', 'Spectral Rolloff', 'Sex', 'Age', 'Species', 'Call'])\n",
+    "    \n",
     "    return output"
    ]
   },
@@ -354,13 +352,6 @@
    "source": [
     "features_dataframe.to_csv('features.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
