Added new audio files
Added the below new audio files for feature extraction
1. Catopuma temminckii
2. Felis silvestris
3. L.Serval

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -199,6 +199,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CT1 = pd.read_csv(r\".\\Capstone Files\\Catopuma temminckii\\CT1.csv\")\n",
+    "CT1_sound, CT1_rate = librosa.load(r\".\\Capstone Files\\Catopuma temminckii\\Catopuma_temminckii_V1736_02.wav\")\n",
+    "#Catopuma temminckii audio files\n",
+    "CT1T = (CT1,CT1_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FS1 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_Silvestris_S0547_01.csv\")\n",
+    "FS1_sound, FS1_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_S0547_01.wav\")\n",
+    "FS2 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_Silvestris_S0595_03.csv\")\n",
+    "FS2_sound, FS2_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_S0595_03.wav\")\n",
+    "FS3 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_silvestris_S0916_03.csv\")\n",
+    "FS3_sound, FS3_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\Felis_silvestris_S0916_03.wav\")\n",
+    "FS4 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_silvestris_S0921_07.csv\")\n",
+    "FS4_sound, FS4_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_S0921_07.wav\")\n",
+    "FS5 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_Silvestris_S1042_07.csv\")\n",
+    "FS5_sound, FS5_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_S1042_07.wav\")\n",
+    "FS6 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_Silvestris_S1411_07.csv\")\n",
+    "FS6_sound, FS6_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_S1411_07.wav\")\n",
+    "FS7 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_Silvestris_S1449_04.csv\")\n",
+    "FS7_sound, FS7_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_V1449_04.wav\")\n",
+    "FS8 = pd.read_csv(r\".\\Capstone Files\\Felis_silvestris\\Felis_Silvestris_V1502_44.csv\")\n",
+    "FS8_sound, FS8_rate = librosa.load(r\".\\Capstone Files\\Felis_silvestris\\(complete)Felis_silvestris_V1502_44.wav\")\n",
+    "#Felis silvestris audio files\n",
+    "FS1T = (FS1,FS1_sound)\n",
+    "FS2T = (FS2,FS2_sound)\n",
+    "FS3T = (FS3,FS3_sound)\n",
+    "FS4T = (FS4,FS4_sound)\n",
+    "FS5T = (FS5,FS5_sound)\n",
+    "FS6T = (FS6,FS6_sound)\n",
+    "FS7T = (FS7,FS7_sound)\n",
+    "FS8T = (FS8,FS8_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LS1 = pd.read_csv(r\".\\Capstone Files\\L.Serval\\LS1.csv\")\n",
+    "LS1_sound, LS1_rate = librosa.load(r\".\\Capstone Files\\L.Serval\\Leptailurus_serval_growl+hiss.wav\")\n",
+    "#L.Serval audio files\n",
+    "LS1T = (LS1,LS1_sound)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,8 +270,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_list = [AJ2, AJ3, AJ5, AJ13, D1T, D2T, D3T, D4T, D5T, C1T, C2T, C3T, C4T, C5T, C6T, L1T, L2T, L3T, L4T, L5T, L6T,\n",
-    "            L7T, L8T, L9T, L10T, L11T, L12T, LR1T, LR2T, LP1T, LP2T, LP3T, LP4T]"
+    "audio_list = [AJ2, AJ3, AJ5, AJ13, D1T, D2T, D3T, D4T, D5T, C1T, C2T, C3T, C4T, C5T, C6T, L1T, L2T, L3T, L4T, L5T, L6T, \n",
+    "              L7T, L8T, L9T, L10T, L11T, L12T, LR1T, LR2T, LP1T, LP2T, LP3T, LP4T, CT1T, FS1T, FS2T, FS3T, FS4T, FS5T, \n",
+    "              FS6T, FS7T, FS8T, LS1T]"
    ]
   },
   {
@@ -356,7 +414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
