--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4f104455",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
        "[345 rows x 46 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8546b351",
    "metadata": {},
    "outputs": [],
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "af6380c7",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "       'Bobcat', 'Ocelot'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,13 +1186,14 @@
     "leg.legendHandles[2].set_color('y')\n",
     "leg.legendHandles[3].set_color('black')\n",
     "leg.legendHandles[4].set_color('purple')\n",
-    "leg.legendHandles[5].set_color('b')"
+    "leg.legendHandles[5].set_color('b')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3efaaf4",
+   "id": "af466bba",
    "metadata": {},
    "outputs": [],
    "source": []
