--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -280,6 +280,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8a43102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zero_Crossings      0\n",
+      "Duration            0\n",
+      "Amp_range           0\n",
+      "Avg_amp             0\n",
+      "Freq_range          0\n",
+      "Pulses_per_Sec      0\n",
+      "Partials            0\n",
+      "MFCC                0\n",
+      "Spectral Rolloff    0\n",
+      "Sex                 0\n",
+      "Age                 0\n",
+      "Species             0\n",
+      "Call                0\n",
+      "dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.columns:\n",
+    "    if i in df['Call']:\n",
+    "        df[i].fillna(df[i].median(), inplace=True)\n",
+    "    else: \n",
+    "        df[i].fillna(df[i].mode()[0], inplace=True)\n",
+    "        \n",
+    "print(df.isnull().sum(), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "510605e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['growl', 'growl?', 'hiss', 'hiss?', 'call', 'unknown',\n",
+       "       'growl/hiss', 'call sequence', 'purr', 'purr sequence', 'Growl',\n",
+       "       'Hiss', 'Loud rumble/roar', 'Sharp Hiss', 'call?', 'roar',\n",
+       "       'roar or call', 'growl ', 'roar?', 'main call', 'call/growl'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Call'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a763c6ab",
    "metadata": {},
