Added New audio files
Added Pantherinae files (Cloud Leopard, Jaguar, Leopard)

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -239,13 +239,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLH1 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Hiss.csv\")\n",
+    "CLH1_sound, CLH1_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Hiss.wav\")\n",
+    "#Cloud_Leopard Hiss audio files\n",
+    "CLH1T = (CLH1,CLH1_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Cloud Leopard Pursten\n",
+    "CLP1 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-1.csv\")\n",
+    "CLP1_sound, CLP1_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-1.wav\")\n",
+    "CLP2 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-2.csv\")\n",
+    "CLP2_sound, CLP2_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-2.wav\")\n",
+    "CLP3 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-3.csv\")\n",
+    "CLP3_sound, CLP3_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-3.wav\")\n",
+    "CLP4 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-4.csv\")\n",
+    "CLP4_sound, CLP4_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-4.wav\")\n",
+    "CLP5 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-5.csv\")\n",
+    "CLP5_sound, CLP5_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-5.wav\")\n",
+    "CLP6 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-6.csv\")\n",
+    "CLP6_sound, CLP6_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-6.wav\")\n",
+    "CLP7 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-7.csv\")\n",
+    "CLP7_sound, CLP7_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-7.wav\")\n",
+    "CLP8 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-8.csv\")\n",
+    "CLP8_sound, CLP8_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-8.wav\")\n",
+    "CLP9 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-9.csv\")\n",
+    "CLP9_sound, CLP9_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-9.wav\")\n",
+    "CLP10 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-10.csv\")\n",
+    "CLP10_sound, CLP10_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-10.wav\")\n",
+    "CLP11 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-11.csv\")\n",
+    "CLP11_sound, CLP11_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-11.wav\")\n",
+    "CLP12 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-12.csv\")\n",
+    "CLP12_sound, CLP12_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-12.wav\")\n",
+    "CLP13 = pd.read_csv(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-13.csv\")\n",
+    "CLP13_sound, CLP13_rate = librosa.load(r\".\\Capstone Files\\Cloud_Leopard\\CL-Prusten-13.wav\")\n",
+    "#Cloud Leopard Pursten audio files\n",
+    "CLP1T = (CLP1,CLP1_sound)\n",
+    "CLP2T = (CLP2,CLP2_sound)\n",
+    "CLP3T = (CLP3,CLP3_sound)\n",
+    "CLP4T = (CLP4,CLP4_sound)\n",
+    "CLP5T = (CLP5,CLP5_sound)\n",
+    "CLP6T = (CLP6,CLP6_sound)\n",
+    "CLP7T = (CLP7,CLP7_sound)\n",
+    "CLP8T = (CLP8,CLP8_sound)\n",
+    "CLP9T = (CLP9,CLP9_sound)\n",
+    "CLP10T = (CLP10,CLP10_sound)\n",
+    "CLP11T = (CLP11,CLP11_sound)\n",
+    "CLP12T = (CLP12,CLP12_sound)\n",
+    "CLP13T = (CLP13,CLP13_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Jaguar Prusten\n",
+    "JP1 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Prusten-1.csv\")\n",
+    "JP1_sound, JP1_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Prusten-1.wav\")\n",
+    "JP2 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Prusten-2.csv\")\n",
+    "JP2_sound, JP2_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Prusten-2.wav\")\n",
+    "#Jaguar Prusten audio files\n",
+    "JP1T = (JP1,JP1_sound)\n",
+    "JP2T = (JP2,JP2_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Jaguar Roar \n",
+    "JR1 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-1.csv\")\n",
+    "JR1_sound, JR1_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-1.wav\")\n",
+    "JR2 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-2.csv\")\n",
+    "JR2_sound, JR2_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-2.wav\")\n",
+    "JR3 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-3.csv\")\n",
+    "JR3_sound, JR3_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-3.wav\")\n",
+    "JR4 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-4.csv\")\n",
+    "JR4_sound, JR4_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-4.wav\")\n",
+    "JR5 = pd.read_csv(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-5.csv\")\n",
+    "JR5_sound, JR5_rate = librosa.load(r\".\\Capstone Files\\Jaguar\\Jaguar-Roar-5.wav\")\n",
+    "#Jaguar Roar audio files\n",
+    "JR1T = (JR1,JR1_sound)\n",
+    "JR2T = (JR2,JR2_sound)\n",
+    "JR3T = (JR3,JR3_sound)\n",
+    "JR4T = (JR4,JR4_sound)\n",
+    "JR5T = (JR5,JR5_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leopard Prusten\n",
+    "LPR1 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 1.csv\")\n",
+    "LPR1_sound, LPR1_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 1.wav\")\n",
+    "LPR2 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 2.csv\")\n",
+    "LPR2_sound, LPR2_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 2.wav\")\n",
+    "LPR3 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 3.csv\")\n",
+    "LPR3_sound, LPR3_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 3.wav\")\n",
+    "LPR4 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 4.csv\")\n",
+    "LPR4_sound, LPR4_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 4.wav\")\n",
+    "LPR5 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 5.csv\")\n",
+    "LPR5_sound, LPR5_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 5.wav\")\n",
+    "LPR6 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 6.csv\")\n",
+    "LPR6_sound, LPR6_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 6.wav\")\n",
+    "LPR7 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 7.csv\")\n",
+    "LPR7_sound, LPR7_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 7.wav\")\n",
+    "LPR8 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 8.csv\")\n",
+    "LPR8_sound, LPR8_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 8.wav\")\n",
+    "LPR9 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 9.csv\")\n",
+    "LPR9_sound, LPR9_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 9.wav\")\n",
+    "LPR10a = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10a.csv\")\n",
+    "LPR10a_sound, LPR10a_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10a.wav\")\n",
+    "LPR10b = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10b.csv\")\n",
+    "LPR10b_sound, LPR10b_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10b.wav\")\n",
+    "LPR10c = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10c.csv\")\n",
+    "LPR10c_sound, LPR10c_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10c.wav\")\n",
+    "LPR10d = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10d.csv\")\n",
+    "LPR10d_sound, LPR10d_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 10d.wav\")\n",
+    "LPR11 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 11.csv\")\n",
+    "LPR11_sound, LPR11_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 11.wav\")\n",
+    "LPR12 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 12.csv\")\n",
+    "LPR12_sound, LPR12_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 12.wav\")\n",
+    "LPR13 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 13.csv\")\n",
+    "LPR13_sound, LPR13_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard roaring sequence 13.wav\")\n",
+    "#Leopard Prusten audio files\n",
+    "LPR1T = (LPR1,LPR1_sound)\n",
+    "LPR2T = (LPR2,LPR2_sound)\n",
+    "LPR3T = (LPR3,LPR3_sound)\n",
+    "LPR4T = (LPR4,LPR4_sound)\n",
+    "LPR5T = (LPR5,LPR5_sound)\n",
+    "LPR6T = (LPR6,LPR6_sound)\n",
+    "LPR7T = (LPR7,LPR7_sound)\n",
+    "LPR8T = (LPR8,LPR8_sound)\n",
+    "LPR9T = (LPR9,LPR9_sound)\n",
+    "LPR10aT = (LPR10a,LPR10a_sound)\n",
+    "LPR10bT = (LPR10b,LPR10b_sound)\n",
+    "LPR10cT = (LPR10c,LPR10c_sound)\n",
+    "LPR10dT = (LPR10d,LPR10d_sound)\n",
+    "LPR11T = (LPR11,LPR11_sound)\n",
+    "LPR12T = (LPR12,LPR12_sound)\n",
+    "LPR13T = (LPR13,LPR13_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leopard Growl\n",
+    "LPG1 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard_growl_2.csv\")\n",
+    "LPG1_sound, LPG1_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard_growl_2.wav\")\n",
+    "LPG2 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard_growl_3.csv\")\n",
+    "LPG2_sound, LPG2_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard_growl_3.wav\")\n",
+    "LPG3 = pd.read_csv(r\".\\Capstone Files\\Leopard\\Leopard_growl_4.csv\")\n",
+    "LPG3_sound, LPG3_rate = librosa.load(r\".\\Capstone Files\\Leopard\\Leopard_growl_4.wav\")\n",
+    "#Leopard Growl audio files\n",
+    "LPG1T = (LPG1,LPG1_sound)\n",
+    "LPG2T = (LPG2,LPG2_sound)\n",
+    "LPG3T = (LPG3,LPG3_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "audio_list = [AJ2, AJ3, AJ5, AJ13, D1T, D2T, D3T, D4T, D5T, C1T, C2T, C3T, C4T, C5T, C6T, L1T, L2T, L3T, L4T, L5T, L6T, \n",
     "              L7T, L8T, L9T, L10T, L11T, L12T, LR1T, LR2T, LP1T, LP2T, LP3T, LP4T, CT1T, FS1T, FS2T, FS3T, FS4T, FS5T, \n",
-    "              FS6T, FS7T, FS8T, LS1T]"
+    "              FS6T, FS7T, FS8T, LS1T, CLH1T, CLP1T, CLP2T, CLP3T, CLP4T, CLP5T, CLP6T, CLP7T, CLP8T, CLP9T, CLP10T, CLP11T, \n",
+    "              CLP12T, CLP13T, JP1T, JP2T, JR1T, JR2T, JR3T, JR4T, JR5T, LPR1T, LPR2T, LPR3T, LPR4T, LPR5T, LPR6T, LPR7T, LPR8T, \n",
+    "              LPR9T, LPR10aT, LPR10bT, LPR10cT, LPR10dT, LPR11T, LPR12T, LPR13T, LPG1T, LPG2T, LPG3T]"
    ]
   },
   {
